# Hearts-of-iron

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.claude/: settings.local.json
core/: GameEngine.cpp  GameEngine.h  GameState.h  MusicPlayer.cpp  MusicPlayer.h  Player.cpp  Player.h  SaveManager.cpp  SaveManager.h  ScenarioBase.cpp  ScenarioBase.h  StoryNode.h
dlc/demon_king/: manifest.json
dlc/demon_king/chapters/: ch01_village.json  ch02_forest.json  ch03_castle.json  ch04_throne.json
dlc/third_reich/: manifest.json
dlc/third_reich/chapters/: ch01_fall_gelb.json  ch02_britain.json  ch03_wolf_pack.json  ch04_stalingrad.json  ch05_berlin.json
engine/: DiceSystem.cpp  DiceSystem.h  DlcManager.cpp  DlcManager.h  DlcTypes.h  MusicPlayer.cpp  NodeEngine.cpp  NodeEngine.h  PlayerSystem.cpp  PlayerSystem.h  SaveManager.cpp  SaveManager.h
resources/: style.qss
scenarios/: BerlinScenario.cpp  BerlinScenario.h  BritainScenario.cpp  BritainScenario.h  FallGelbScenario.cpp  FallGelbScenario.h  StalingradScenario.cpp  StalingradScenario.h  WolfPackScenario.cpp  WolfPackScenario.h
ui/: CharacterCreateWidget.cpp  CharacterCreateWidget.h  GameWidget.cpp  GameWidget.h  MainWindow.cpp  MainWindow.h  MenuWidget.cpp  MenuWidget.h  RpgGameWidget.cpp  RpgGameWidget.h  SaveLoadDialog.cpp  SaveLoadDialog.h
